# Benchmark-Py-Frameworks

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  locustfile.py  pyproject.toml  requirements.txt
django-on-docker/app/: manage.py
django-on-docker/app/django_bench/: asgi.py  settings.py  urls.py  wsgi.py
django-on-docker/app/heavy_duty/: apps.py  views.py
fastapi-on-docker/app/: main.py
tiny_django/: manage.py  pyproject.toml
tiny_django/tiny_django/: settings.py  urls.py  wsgi.py
