[tool.poetry]
name = "repos"
version = "0.1.0"
description = ""
authors = ["cubricmms <cubric.mms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
cookiecutter = "^1.7.3"
pre-commit = "^2.17.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
