[tool.poetry]
name = "benchmark"
version = "0.1.0"
description = "benchmark django and fastapi"
authors = ["cubricmms <cubric.mms@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.3"
fastapi = "^0.75.0"
gunicorn = "^20.1.0"
psycopg2-binary = "^2.9.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
